# worm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/: worm.hpp
include/worm/: worm.hpp  worm.inl
src/: worm.cpp
src/worm/: worm.cpp
